# PlatformOps

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
apps/api/: requirements.txt
apps/api/platformops/: __init__.py  catalog.py  db.py  jobs.py  main.py  models.py  orchestrator.py  schemas.py  settings.py  tasks.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: main.tsx  styles.css
catalog/: dependencies.yaml  observability.yaml  services.yaml
data/runtime/: config-apply-36-1782576260.yml  config-restore-36-1782576260.yml
docs/: architecture.md  cplatform-comparative-audit.md  cplatform-distillation-audit.md  cplatform-full-parity-specification.md  cplatform-parity-map.md  demo-script.md  interview-walkthrough.md  lifecycle-governance.md  long-running-agent-goal.md  project-audit-guide.md  release-policy-governance.md  reliability-operations.md  resume-bullets.md  security-operations.md
ops/ansible/: inventory.example.ini
ops/ansible/playbooks/: config_apply.yml  config_snapshot.yml  deploy_observability.yml  docker_service.yml  monitoring_sweep.yml  observability_stack.yml  service_backup.yml  service_config_apply.sh  service_config_snapshot.sh  service_log_backfill.py  service_logs.yml  service_runtime_patch.py  service_status.py  service_status.yml  teardown_observability.yml  (+1 more)
ops/compose/: docker-compose.local.yml  docker-compose.observability.yml
scripts/: dev-up.sh  seed_demo.py  verify_platformops.py
tasks/: todo.md
(+35 files in other folders)
